public-rw/SWI098/du4/du4g.output
Terminals unused in grammar

   DUTOK_RECORD


Grammar

    0 $accept: mlaskal $end

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    2 program_block: label_block const_def_block type_def_block var_def_block procfunc_def_block begin_cmd_end_block

    3 label_block: /* empty */
    4            | DUTOK_LABEL label_name_block DUTOK_SEMICOLON

    5 label_name_block: DUTOK_UINT
    6                 | label_name_block DUTOK_COMMA DUTOK_UINT

    7 const_def_block: /* empty */
    8                | DUTOK_CONST const_set_block

    9 const_set_block: DUTOK_IDENTIFIER DUTOK_EQ constant DUTOK_SEMICOLON
   10                | const_set_block DUTOK_IDENTIFIER DUTOK_EQ constant DUTOK_SEMICOLON

   11 constant: u_constant
   12         | DUTOK_OPER_SIGNADD DUTOK_UINT
   13         | DUTOK_OPER_SIGNADD DUTOK_REAL

   14 type_def_block: /* empty */
   15               | DUTOK_TYPE type_set_block

   16 type_set_block: DUTOK_IDENTIFIER DUTOK_EQ type DUTOK_SEMICOLON
   17               | type_set_block DUTOK_IDENTIFIER DUTOK_EQ type DUTOK_SEMICOLON

   18 var_def_block: /* empty */
   19              | DUTOK_VAR var_set_block

   20 var_set_block: ident_list DUTOK_COLON type DUTOK_SEMICOLON
   21              | ident_list DUTOK_COLON type DUTOK_SEMICOLON var_set_block

   22 ident_list: DUTOK_IDENTIFIER
   23           | ident_list DUTOK_COMMA DUTOK_IDENTIFIER

   24 procfunc_def_block: /* empty */
   25                   | procfunc_header DUTOK_SEMICOLON block DUTOK_SEMICOLON procfunc_def_block

   26 begin_cmd_end_block: DUTOK_BEGIN cmd_list DUTOK_END

   27 block: label_block const_def_block type_def_block var_def_block begin_cmd_end_block

   28 procfunc_header: DUTOK_PROCEDURE DUTOK_IDENTIFIER params_opt
   29                | DUTOK_FUNCTION DUTOK_IDENTIFIER params_opt DUTOK_COLON DUTOK_IDENTIFIER

   30 params_opt: /* empty */
   31           | DUTOK_LPAR params DUTOK_RPAR

   32 params: var_opt ident_list DUTOK_COLON DUTOK_IDENTIFIER
   33       | var_opt ident_list DUTOK_COLON DUTOK_IDENTIFIER DUTOK_SEMICOLON params

   34 var_opt: /* empty */
   35        | DUTOK_VAR

   36 type: ordtype
   37     | structtype
   38     | DUTOK_IDENTIFIER

   39 ordtype: ordconst DUTOK_DOTDOT ordconst

   40 structtype: DUTOK_ARRAY DUTOK_LSBRA ordtype_list DUTOK_RSBRA DUTOK_OF type

   41 ordtype_list: ordtype
   42             | DUTOK_IDENTIFIER
   43             | ordtype_list DUTOK_COMMA ordtype

   44 cmd: ecf
   45    | enf

   46 cmd_list: cmd
   47         | cmd_list DUTOK_SEMICOLON cmd

   48 ecf: DUTOK_GOTO DUTOK_UINT
   49    | DUTOK_IF expr DUTOK_THEN ecf DUTOK_ELSE ecf
   50    | DUTOK_WHILE expr DUTOK_DO ecf
   51    | DUTOK_REPEAT cmd_list DUTOK_UNTIL expr
   52    | DUTOK_FOR DUTOK_IDENTIFIER DUTOK_ASSIGN expr DUTOK_FOR_DIRECTION expr DUTOK_DO ecf
   53    | DUTOK_IDENTIFIER concrete_params_opt
   54    | DUTOK_UINT DUTOK_COLON ecf
   55    | var DUTOK_ASSIGN expr
   56    | DUTOK_BEGIN cmd_list DUTOK_END
   57    | /* empty */

   58 enf: DUTOK_IF expr DUTOK_THEN cmd
   59    | DUTOK_WHILE expr DUTOK_DO enf
   60    | DUTOK_IF expr DUTOK_THEN ecf DUTOK_ELSE enf
   61    | DUTOK_FOR DUTOK_IDENTIFIER DUTOK_ASSIGN expr DUTOK_FOR_DIRECTION expr DUTOK_DO enf
   62    | DUTOK_UINT DUTOK_COLON enf

   63 var: DUTOK_IDENTIFIER
   64    | var DUTOK_LSBRA expr_cycle DUTOK_RSBRA

   65 concrete_params_opt: /* empty */
   66                    | DUTOK_LPAR concrete_params DUTOK_RPAR

   67 concrete_params: expr
   68                | expr DUTOK_COMMA concrete_params

   69 expr: simple_expr
   70     | simple_expr DUTOK_OPER_REL simple_expr
   71     | simple_expr DUTOK_EQ simple_expr

   72 expr_cycle: expr
   73           | expr_cycle DUTOK_COMMA expr

   74 simple_expr: term_cycle
   75            | DUTOK_OPER_SIGNADD term_cycle

   76 term_cycle: term DUTOK_OPER_SIGNADD term_cycle
   77           | term DUTOK_OR term_cycle
   78           | term

   79 term: factor
   80     | factor DUTOK_OPER_MUL term

   81 factor: u_constant_no_ident
   82       | var
   83       | DUTOK_IDENTIFIER DUTOK_LPAR concrete_params DUTOK_RPAR
   84       | DUTOK_LPAR expr DUTOK_RPAR
   85       | DUTOK_NOT factor

   86 u_constant: DUTOK_IDENTIFIER
   87           | u_constant_no_ident

   88 u_constant_no_ident: DUTOK_UINT
   89                    | DUTOK_REAL
   90                    | DUTOK_STRING

   91 ordconst: DUTOK_OPER_SIGNADD DUTOK_IDENTIFIER
   92         | DUTOK_OPER_SIGNADD DUTOK_UINT
   93         | DUTOK_UINT
   94         | DUTOK_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
DUTOK_PROGRAM (258) 1
DUTOK_LABEL (259) 4
DUTOK_CONST (260) 8
DUTOK_TYPE (261) 15
DUTOK_VAR (262) 19 35
DUTOK_BEGIN (263) 26 56
DUTOK_END (264) 26 56
DUTOK_PROCEDURE (265) 28
DUTOK_FUNCTION (266) 29
DUTOK_ARRAY (267) 40
DUTOK_OF (268) 40
DUTOK_GOTO (269) 48
DUTOK_IF (270) 49 58 60
DUTOK_THEN (271) 49 58 60
DUTOK_ELSE (272) 49 60
DUTOK_WHILE (273) 50 59
DUTOK_DO (274) 50 52 59 61
DUTOK_REPEAT (275) 51
DUTOK_UNTIL (276) 51
DUTOK_FOR (277) 52 61
DUTOK_OR (278) 77
DUTOK_NOT (279) 85
DUTOK_RECORD (280)
DUTOK_IDENTIFIER (281) 1 9 10 16 17 22 23 28 29 32 33 38 42 52 53 61
    63 83 86 91 94
DUTOK_UINT (282) 5 6 12 48 54 62 88 92 93
DUTOK_REAL (283) 13 89
DUTOK_STRING (284) 90
DUTOK_SEMICOLON (285) 1 4 9 10 16 17 20 21 25 33 47
DUTOK_DOT (286) 1
DUTOK_COMMA (287) 6 23 43 68 73
DUTOK_EQ (288) 9 10 16 17 71
DUTOK_COLON (289) 20 21 29 32 33 54 62
DUTOK_LPAR (290) 31 66 83 84
DUTOK_RPAR (291) 31 66 83 84
DUTOK_DOTDOT (292) 39
DUTOK_LSBRA (293) 40 64
DUTOK_RSBRA (294) 40 64
DUTOK_ASSIGN (295) 52 55 61
DUTOK_OPER_REL (296) 70
DUTOK_OPER_SIGNADD (297) 12 13 75 76 91 92
DUTOK_OPER_MUL (298) 80
DUTOK_FOR_DIRECTION (299) 52 61


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
mlaskal (46)
    on left: 1, on right: 0
program_block (47)
    on left: 2, on right: 1
label_block (48)
    on left: 3 4, on right: 2 27
label_name_block (49)
    on left: 5 6, on right: 4 6
const_def_block (50)
    on left: 7 8, on right: 2 27
const_set_block (51)
    on left: 9 10, on right: 8 10
constant (52)
    on left: 11 12 13, on right: 9 10
type_def_block (53)
    on left: 14 15, on right: 2 27
type_set_block (54)
    on left: 16 17, on right: 15 17
var_def_block (55)
    on left: 18 19, on right: 2 27
var_set_block (56)
    on left: 20 21, on right: 19 21
ident_list (57)
    on left: 22 23, on right: 20 21 23 32 33
procfunc_def_block (58)
    on left: 24 25, on right: 2 25
begin_cmd_end_block (59)
    on left: 26, on right: 2 27
block (60)
    on left: 27, on right: 25
procfunc_header (61)
    on left: 28 29, on right: 25
params_opt (62)
    on left: 30 31, on right: 28 29
params (63)
    on left: 32 33, on right: 31 33
var_opt (64)
    on left: 34 35, on right: 32 33
type (65)
    on left: 36 37 38, on right: 16 17 20 21 40
ordtype (66)
    on left: 39, on right: 36 41 43
structtype (67)
    on left: 40, on right: 37
ordtype_list (68)
    on left: 41 42 43, on right: 40 43
cmd (69)
    on left: 44 45, on right: 46 47 58
cmd_list (70)
    on left: 46 47, on right: 26 47 51 56
ecf (71)
    on left: 48 49 50 51 52 53 54 55 56 57, on right: 44 49 50 52 54
    60
enf (72)
    on left: 58 59 60 61 62, on right: 45 59 60 61 62
var (73)
    on left: 63 64, on right: 55 64 82
concrete_params_opt (74)
    on left: 65 66, on right: 53
concrete_params (75)
    on left: 67 68, on right: 66 68 83
expr (76)
    on left: 69 70 71, on right: 49 50 51 52 55 58 59 60 61 67 68 72
    73 84
expr_cycle (77)
    on left: 72 73, on right: 64 73
simple_expr (78)
    on left: 74 75, on right: 69 70 71
term_cycle (79)
    on left: 76 77 78, on right: 74 75 76 77
term (80)
    on left: 79 80, on right: 76 77 78 80
factor (81)
    on left: 81 82 83 84 85, on right: 79 80 85
u_constant (82)
    on left: 86 87, on right: 11
u_constant_no_ident (83)
    on left: 88 89 90, on right: 81 87
ordconst (84)
    on left: 91 92 93 94, on right: 39


state 0

    0 $accept: . mlaskal $end
    1 mlaskal: . DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_PROGRAM  shift, and go to state 1

    mlaskal  go to state 2


state 1

    1 mlaskal: DUTOK_PROGRAM . DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: mlaskal . $end

    $end  shift, and go to state 4


state 3

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER . DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_SEMICOLON  shift, and go to state 5


state 4

    0 $accept: mlaskal $end .

    $default  accept


state 5

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON . program_block DUTOK_DOT
    2 program_block: . label_block const_def_block type_def_block var_def_block procfunc_def_block begin_cmd_end_block
    3 label_block: .  [DUTOK_CONST, DUTOK_TYPE, DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
    4            | . DUTOK_LABEL label_name_block DUTOK_SEMICOLON

    DUTOK_LABEL  shift, and go to state 6

    $default  reduce using rule 3 (label_block)

    program_block  go to state 7
    label_block    go to state 8


state 6

    4 label_block: DUTOK_LABEL . label_name_block DUTOK_SEMICOLON
    5 label_name_block: . DUTOK_UINT
    6                 | . label_name_block DUTOK_COMMA DUTOK_UINT

    DUTOK_UINT  shift, and go to state 9

    label_name_block  go to state 10


state 7

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block . DUTOK_DOT

    DUTOK_DOT  shift, and go to state 11


state 8

    2 program_block: label_block . const_def_block type_def_block var_def_block procfunc_def_block begin_cmd_end_block
    7 const_def_block: .  [DUTOK_TYPE, DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
    8                | . DUTOK_CONST const_set_block

    DUTOK_CONST  shift, and go to state 12

    $default  reduce using rule 7 (const_def_block)

    const_def_block  go to state 13


state 9

    5 label_name_block: DUTOK_UINT .

    $default  reduce using rule 5 (label_name_block)


state 10

    4 label_block: DUTOK_LABEL label_name_block . DUTOK_SEMICOLON
    6 label_name_block: label_name_block . DUTOK_COMMA DUTOK_UINT

    DUTOK_SEMICOLON  shift, and go to state 14
    DUTOK_COMMA      shift, and go to state 15


state 11

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT .

    $default  reduce using rule 1 (mlaskal)


state 12

    8 const_def_block: DUTOK_CONST . const_set_block
    9 const_set_block: . DUTOK_IDENTIFIER DUTOK_EQ constant DUTOK_SEMICOLON
   10                | . const_set_block DUTOK_IDENTIFIER DUTOK_EQ constant DUTOK_SEMICOLON

    DUTOK_IDENTIFIER  shift, and go to state 16

    const_set_block  go to state 17


state 13

    2 program_block: label_block const_def_block . type_def_block var_def_block procfunc_def_block begin_cmd_end_block
   14 type_def_block: .  [DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   15               | . DUTOK_TYPE type_set_block

    DUTOK_TYPE  shift, and go to state 18

    $default  reduce using rule 14 (type_def_block)

    type_def_block  go to state 19


state 14

    4 label_block: DUTOK_LABEL label_name_block DUTOK_SEMICOLON .

    $default  reduce using rule 4 (label_block)


state 15

    6 label_name_block: label_name_block DUTOK_COMMA . DUTOK_UINT

    DUTOK_UINT  shift, and go to state 20


state 16

    9 const_set_block: DUTOK_IDENTIFIER . DUTOK_EQ constant DUTOK_SEMICOLON

    DUTOK_EQ  shift, and go to state 21


state 17

    8 const_def_block: DUTOK_CONST const_set_block .  [DUTOK_TYPE, DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   10 const_set_block: const_set_block . DUTOK_IDENTIFIER DUTOK_EQ constant DUTOK_SEMICOLON

    DUTOK_IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 8 (const_def_block)


state 18

   15 type_def_block: DUTOK_TYPE . type_set_block
   16 type_set_block: . DUTOK_IDENTIFIER DUTOK_EQ type DUTOK_SEMICOLON
   17               | . type_set_block DUTOK_IDENTIFIER DUTOK_EQ type DUTOK_SEMICOLON

    DUTOK_IDENTIFIER  shift, and go to state 23

    type_set_block  go to state 24


state 19

    2 program_block: label_block const_def_block type_def_block . var_def_block procfunc_def_block begin_cmd_end_block
   18 var_def_block: .  [DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   19              | . DUTOK_VAR var_set_block

    DUTOK_VAR  shift, and go to state 25

    $default  reduce using rule 18 (var_def_block)

    var_def_block  go to state 26


state 20

    6 label_name_block: label_name_block DUTOK_COMMA DUTOK_UINT .

    $default  reduce using rule 6 (label_name_block)


state 21

    9 const_set_block: DUTOK_IDENTIFIER DUTOK_EQ . constant DUTOK_SEMICOLON
   11 constant: . u_constant
   12         | . DUTOK_OPER_SIGNADD DUTOK_UINT
   13         | . DUTOK_OPER_SIGNADD DUTOK_REAL
   86 u_constant: . DUTOK_IDENTIFIER
   87           | . u_constant_no_ident
   88 u_constant_no_ident: . DUTOK_UINT
   89                    | . DUTOK_REAL
   90                    | . DUTOK_STRING

    DUTOK_IDENTIFIER    shift, and go to state 27
    DUTOK_UINT          shift, and go to state 28
    DUTOK_REAL          shift, and go to state 29
    DUTOK_STRING        shift, and go to state 30
    DUTOK_OPER_SIGNADD  shift, and go to state 31

    constant             go to state 32
    u_constant           go to state 33
    u_constant_no_ident  go to state 34


state 22

   10 const_set_block: const_set_block DUTOK_IDENTIFIER . DUTOK_EQ constant DUTOK_SEMICOLON

    DUTOK_EQ  shift, and go to state 35


state 23

   16 type_set_block: DUTOK_IDENTIFIER . DUTOK_EQ type DUTOK_SEMICOLON

    DUTOK_EQ  shift, and go to state 36


state 24

   15 type_def_block: DUTOK_TYPE type_set_block .  [DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   17 type_set_block: type_set_block . DUTOK_IDENTIFIER DUTOK_EQ type DUTOK_SEMICOLON

    DUTOK_IDENTIFIER  shift, and go to state 37

    $default  reduce using rule 15 (type_def_block)


state 25

   19 var_def_block: DUTOK_VAR . var_set_block
   20 var_set_block: . ident_list DUTOK_COLON type DUTOK_SEMICOLON
   21              | . ident_list DUTOK_COLON type DUTOK_SEMICOLON var_set_block
   22 ident_list: . DUTOK_IDENTIFIER
   23           | . ident_list DUTOK_COMMA DUTOK_IDENTIFIER

    DUTOK_IDENTIFIER  shift, and go to state 38

    var_set_block  go to state 39
    ident_list     go to state 40


state 26

    2 program_block: label_block const_def_block type_def_block var_def_block . procfunc_def_block begin_cmd_end_block
   24 procfunc_def_block: .  [DUTOK_BEGIN]
   25                   | . procfunc_header DUTOK_SEMICOLON block DUTOK_SEMICOLON procfunc_def_block
   28 procfunc_header: . DUTOK_PROCEDURE DUTOK_IDENTIFIER params_opt
   29                | . DUTOK_FUNCTION DUTOK_IDENTIFIER params_opt DUTOK_COLON DUTOK_IDENTIFIER

    DUTOK_PROCEDURE  shift, and go to state 41
    DUTOK_FUNCTION   shift, and go to state 42

    $default  reduce using rule 24 (procfunc_def_block)

    procfunc_def_block  go to state 43
    procfunc_header     go to state 44


state 27

   86 u_constant: DUTOK_IDENTIFIER .

    $default  reduce using rule 86 (u_constant)


state 28

   88 u_constant_no_ident: DUTOK_UINT .

    $default  reduce using rule 88 (u_constant_no_ident)


state 29

   89 u_constant_no_ident: DUTOK_REAL .

    $default  reduce using rule 89 (u_constant_no_ident)


state 30

   90 u_constant_no_ident: DUTOK_STRING .

    $default  reduce using rule 90 (u_constant_no_ident)


state 31

   12 constant: DUTOK_OPER_SIGNADD . DUTOK_UINT
   13         | DUTOK_OPER_SIGNADD . DUTOK_REAL

    DUTOK_UINT  shift, and go to state 45
    DUTOK_REAL  shift, and go to state 46


state 32

